# Candle-Bert

./: Cargo.toml  README.md
python-examples/: demo-rs-bert.py  demo-sentence-transformer.py
src/: lib.rs
