[package]
name = "candle_bert"
version = "0.1.0"
edition = "2021"

[lib]
name = "candle_bert"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
candle-nn = { version = "0.5.1" , features = ["cuda"]}
candle-transformers = { version = "0.5.1" , features = ["cuda"]}
candle-core = { version = "0.5.1" , features = ["cuda"]}
tokenizers = { version = "0.13.2", features = ["onig"] }
serde_json = "1.0.96"
anyhow = "1.0.70"
intel-mkl-src = "0.8.0-rc.1"




[build-dependencies]
pyo3-build-config = "0.18.1"

